--- a/spec/runner.html
+++ b/spec/runner.html
@@ -18,6 +18,7 @@
     <script src="../bower_components/requirejs/require.js"></script>
     <script src="../browser/noflo-amd.js"></script>
     <script>mocha.setup('bdd');</script>
+    <script src="./Configure.js"></script>
     <script src="./Require.js"></script>
     <script>
       if (window.mochaPhantomJS) {
